<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"

        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"

            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"

            android:layout_height="match_parent"
            android:layout_width="wrap_content" />

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_input_add"
        android:layout_marginBottom="35dp"
        android:id="@+id/btnAnadirBebida"
        app:backgroundTint="@android:color/holo_red_dark"
        app:rippleColor="@color/cardview_dark_background"
        app:elevation="9dp"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_alignParentBottom="true"
        />

    <TextView
        android:text="@string/bseleccionadas"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"

        android:layout_below="@+id/appbar"
        android:layout_alignLeft="@+id/textView12"
        android:layout_alignStart="@+id/textView12"
        android:layout_marginTop="28dp" />

    <TextView
        android:text="@string/bfinalizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar"
        android:layout_alignLeft="@+id/btnAnadirBurger"
        android:layout_alignStart="@+id/btnAnadirBurger"
        android:id="@+id/textViews" />

    <Button
        android:text="@string/siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttons"
        android:layout_marginRight="24dp"
        android:layout_marginEnd="24dp"
        android:layout_alignTop="@+id/btnAnadirBebida"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>